tests/e2e-openshift/networkpolicy/00-assert-operator-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/name: opentelemetry-operator
    control-plane: controller-manager
  namespace: opentelemetry-operator-system
status:
  containerStatuses:
  - name: manager
    ready: true
    started: true
  phase: Running
